--- a/Assignment/demo3.html
+++ b/Assignment/demo3.html
@@ -26,69 +26,64 @@
       <li class="list-group-item">Item 2</li>
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
-      <li class="lgt">Item 5</li>
-      <!-- <li class="lgt">Item 5</li> -->
     </ul>
+    <span>Demo text</span>
    </div>
   </div>
-  <script>
-   document.getElementsByClassName("lgt")[0].style.fontWeight = "bold";
-   document.getElementsByTagName("li")[4].style.backgroundColor = "green";
-    console.log(document.getElementById("header-title"));
-    let header = document.getElementById("header-title");
-    let header1 = document.getElementById("main-header");
-    header.style.border = "solid 3px black"; 
-    header1.style.borderBottom = "solid 3px black"; 
-    document.getElementsByClassName("title")[0].style.fontWeight = "bold";
-    document.getElementsByClassName("title")[0].style.color = "green";
-    // document.querySelector(".list-group-item:nth-child(2)").style.backgroundColor = "green";
-    // document.querySelector(".list-group-item:nth-child(3)").style.display = "none";
 
-    document.getElementsByClassName("list-group-item")[2].style.backgroundColor = "green";
-    let l6 = document.querySelectorAll("li.list-group-item");
-    l6[1].style.color = "green";
-
-    
-        document.getElementsByClassName("list-group-item")[i].style.fontWeight="bold";
-        let odd = document.querySelectorAll("li:nth-child(odd)");
-        for(let i = 0; i < odd.length; i++){
-            odd[i].style.backgroundColor = "green";
-        }
-
-//    document.getElementsByClassName("lgt")[0].style.fontWeight = "bold";
-
-//    document.getElementsByTagName("li")[4].style.backgroundColor = "green";
-
-//     console.log(document.getElementById("header-title"));
-//     let header = document.getElementById("header-title");
-//     let header1 = document.getElementById("main-header");
-//     header.style.border = "solid 3px black"; 
-//     header1.style.borderBottom = "solid 3px black"; 
-//     document.getElementsByClassName("title")[0].style.fontWeight = "bold";
-//     document.getElementsByClassName("title")[0].style.color = "green";
-
-//     document.getElementsByClassName("list-group-item")[2].style.backgroundColor = "green";
-
-//     let lst = document.getElementsByClassName("list-group-item");
-//     for(let i = 0; i < lst.length; i++)
-//     {
-//         document.getElementsByClassName("list-group-item")[i].style.fontWeight="bold";
-//     }
-    //header.textContent = "Hello";
-    //header.innerHTML = "<h3>Web Development</h3>";
-    // console.dir(document);
-    // console.log(document.domain);
-    // console.log(document.URL);
-    // console.log(document.title);
-    // document.title = 123;
-    // console.log(document.doctype);
-    // console.log(document.head);
-    // console.log(document.body);
-    // console.log(document.all);
-    // console.log(document.all[10]);
-    // console.log(document.forms);
-    // console.log(document.links);
-    // console.log(document.images);
-  </script>
 </body>
+  <script>
+        let itemlist = document.querySelector("#items");
+  itemlist.previousElementSibling.style.color = "green";
+    let newdiv = document.createElement('div');
+    newdiv.className = "Hello";
+    newdiv.id = "hello1";
+    newdiv.setAttribute('title',"Hello Div");
+    newdivtext = document.createTextNode("Hello World");
+    newdiv.appendChild(newdivtext);
+    let cont = document.querySelector('header .container');
+    let head1 = document.querySelector('header h1');
+    cont.insertBefore(newdiv, head1);
+    console.log(newdiv);
+    newdiv.style.fontSize = '30px';
+
+    let newdiv1 = document.createElement('li');
+    newdivtext1 = document.createTextNode("Hello World");
+    newdiv1.appendChild(newdivtext1);
+    console.log(newdiv1);
+    let ul1 = document.getElementById("items");
+    ul1.insertBefore(newdiv1, ul1.children[0]);
+
+    // console.log(itemlist.parentNode);
+    // itemlist.parentNode.style.backgroundColor = "lightgrey";
+    // console.log(itemlist.parentNode.parentNode);
+    // console.log(itemlist.parentNode.parentNode.parentNode);
+
+    // console.log("");
+
+    // console.log(itemlist.parentElement);
+    // itemlist.parentElement.style.backgroundColor = "lightgreen";
+    // console.log(itemlist.parentElement.parentElement);
+    // console.log(itemlist.parentElement.parentElement.parentElement);
+
+    //console.log(itemlist.childNodes);
+    // console.log(itemlist.children);
+    // console.log(itemlist.children[1]);
+    // itemlist.children[1].style.backgroundColor = "yellow";
+
+    // console.log(itemlist.firstElementChild);
+    // itemlist.firstElementChild.textContent = "Hello1";
+
+    // console.log(itemlist.lastChild);
+    // itemlist.lastChild.textContent = "Hello4";
+
+    // console.log(itemlist.lastElementChild);
+    // itemlist.lastElementChild.textContent = "Hello4";
+
+    // console.log(itemlist.nextSibling);
+    // console.log(itemlist.nextElementSibling);
+
+    // console.log(itemlist.previousSibling);
+    // console.log(itemlist.previousElementSibling);    
+  </script>
 </html>
